force-app/main/default/objects/Application__c/fields/AFP_Status__c.field-meta.xml
<CustomField>
    <fullName>AFP_Status__c</fullName>
    <inlineHelpText>The current status of digital signature</inlineHelpText>
    <label>AFP Status</label>
    <length>15</length>
    <type>Text</type>
</CustomField>