force-app/main/default/objects/Application__c/fields/AFP_Status_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>AFP_Status_Completed_Date__c</fullName>
    <inlineHelpText>The date of the digital signature status.</inlineHelpText>
    <label>AFP Status Completed Date</label>
    <type>Date</type>
</CustomField>