force-app/main/default/objects/Application__c/fields/AFP_Status_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>AFP_Status_Sent_Date__c</fullName>
    <label>AFP Status Sent Date</label>
    <type>Date</type>
</CustomField>