force-app/main/default/objects/Application__c/fields/Amount_Recommended__c.field-meta.xml
<CustomField>
    <fullName>Amount_Recommended__c</fullName>
    <inlineHelpText>Must be &gt;$0 for the Approval process.</inlineHelpText>
    <label>Amount Recommended</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>