force-app/main/default/objects/Application__c/fields/Analysis_Funding_History__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Funding_History__c</fullName>
    <label>Analysis: Funding History</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>