force-app/main/default/objects/Application__c/fields/Analysis_Metrics_Past_Grant_Success__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Metrics_Past_Grant_Success__c</fullName>
    <label>Analysis: Metrics/Past Grant Success</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>