force-app/main/default/objects/Application__c/fields/Analysis_Organizational_Background__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Organizational_Background__c</fullName>
    <label>Analysis: Organizational Background</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>