force-app/main/default/objects/Application__c/fields/Analysis_Other_Information__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Other_Information__c</fullName>
    <label>Analysis: Other Information</label>
    <length>15000</length>
    <type>Html</type>
</CustomField>