force-app/main/default/objects/Application__c/fields/Analysis_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Proposal__c</fullName>
    <label>Analysis: Proposal</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>