force-app/main/default/objects/Application__c/fields/Application_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Due_Date__c</fullName>
    <formula>Invited_to_apply_date__c +14</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Due Date</label>
    <type>Date</type>
</CustomField>