force-app/main/default/objects/Application__c/fields/Application_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Application_External_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The previous Salesforce ID - matches to old instance</description>
    <externalId>true</externalId>
    <inlineHelpText>The previous Salesforce ID</inlineHelpText>
    <label>Application External ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>