force-app/main/default/objects/Application__c/fields/Application_Prefill__c.field-meta.xml
<CustomField>
    <fullName>Application_Prefill__c</fullName>
    <label>Application Prefill</label>
    <type>Url</type>
</CustomField>