force-app/main/default/objects/Application__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <label>Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New - Pending</fullName>
            </value>
            <value>
                <fullName>Invited to Apply</fullName>
            </value>
            <value>
                <fullName>Follow Up Required</fullName>
            </value>
            <value>
                <fullName>Consultant Review</fullName>
            </value>
            <value>
                <fullName>Closed - Rejected by CSR</fullName>
            </value>
            <value>
                <fullName>COI Request</fullName>
            </value>
            <value>
                <fullName>Committee Review</fullName>
            </value>
            <value>
                <fullName>Marketing Review</fullName>
            </value>
            <value>
                <fullName>Final Review</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Closed - Rejected by Committee</fullName>
            </value>
            <value>
                <fullName>Approval Requested</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Closed - Rejected</fullName>
            </value>
            <value>
                <fullName>Closed - Partially Paid</fullName>
            </value>
            <value>
                <fullName>Closed - Fully Paid</fullName>
            </value>
            <value>
                <fullName>Sentara Sponsorship Pending</fullName>
            </value>
            <value>
                <fullName>Sentara Sponsorship Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>