force-app/main/default/objects/Application__c/fields/Associated_CHNA_Gap__c.field-meta.xml
<CustomField>
    <fullName>Associated_CHNA_Gap__c</fullName>
    <description>Associated Community Health Needs Assessment (CHNA) gap</description>
    <inlineHelpText>Associated Community Health Needs Assessment (CHNA) gap</inlineHelpText>
    <label>Associated CHNA Gap</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>