force-app/main/default/objects/Application__c/fields/Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_City__c</fullName>
    <description>Billing City</description>
    <formula>Account__r.BillingCity</formula>
    <inlineHelpText>From the Account billing information</inlineHelpText>
    <label>Billing City</label>
    <type>Text</type>
</CustomField>