force-app/main/default/objects/Application__c/fields/Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Billing_State__c</fullName>
    <description>Billing state</description>
    <formula>Account__r.BillingState</formula>
    <inlineHelpText>From the Account billing information</inlineHelpText>
    <label>Billing State</label>
    <type>Text</type>
</CustomField>