force-app/main/default/objects/Application__c/fields/Board_American_Indian__c.field-meta.xml
<CustomField>
    <fullName>Board_American_Indian__c</fullName>
    <label>Board: American Indian</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>