force-app/main/default/objects/Application__c/fields/Board_Male__c.field-meta.xml
<CustomField>
    <fullName>Board_Male__c</fullName>
    <label>Board: Male</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>