force-app/main/default/objects/Application__c/fields/Board_Non_Binary__c.field-meta.xml
<CustomField>
    <fullName>Board_Non_Binary__c</fullName>
    <label>Board: Non-Binary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>