force-app/main/default/objects/Application__c/fields/Board_Non_hispanic__c.field-meta.xml
<CustomField>
    <fullName>Board_Non_hispanic__c</fullName>
    <label>Board: Non-hispanic</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>