force-app/main/default/objects/Application__c/fields/Board_Other_Gender__c.field-meta.xml
<CustomField>
    <fullName>Board_Other_Gender__c</fullName>
    <label>Board: Other Gender</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>