force-app/main/default/objects/Application__c/fields/Board_Pac_Islander__c.field-meta.xml
<CustomField>
    <fullName>Board_Pac_Islander__c</fullName>
    <label>Board: Pac Islander</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>