force-app/main/default/objects/Application__c/fields/Board_Two_or_more_races__c.field-meta.xml
<CustomField>
    <fullName>Board_Two_or_more_races__c</fullName>
    <label>Board: Two or more races</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>