force-app/main/default/objects/Application__c/fields/Board_White__c.field-meta.xml
<CustomField>
    <fullName>Board_White__c</fullName>
    <label>Board: White</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>