force-app/main/default/objects/Application__c/fields/Bypass_Validation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypasses the validation that prevents setting status to Approved without process</description>
    <inlineHelpText>Bypasses the validation that prevents setting status to Approved without process</inlineHelpText>
    <label>Bypass Validation</label>
    <type>Checkbox</type>
</CustomField>