force-app/main/default/objects/Application__c/fields/City_Served__c.field-meta.xml
<CustomField>
    <fullName>City_Served__c</fullName>
    <label>City Served</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>County_Served__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accomac</fullName>
            </value>
            <value>
                <fullName>Assawoman</fullName>
            </value>
            <value>
                <fullName>Atlantic</fullName>
            </value>
            <value>
                <fullName>Belle Haven</fullName>
            </value>
            <value>
                <fullName>Bloxom</fullName>
            </value>
            <value>
                <fullName>Charlottesville</fullName>
            </value>
            <value>
                <fullName>Batesville</fullName>
            </value>
            <value>
                <fullName>Covesville</fullName>
            </value>
            <value>
                <fullName>Crozet</fullName>
            </value>
            <value>
                <fullName>Earlysville</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>