force-app/main/default/objects/Application__c/fields/City_Served_Test__c.field-meta.xml
<CustomField>
    <fullName>City_Served_Test__c</fullName>
    <label>City Served Test</label>
    <length>50</length>
    <type>Text</type>
</CustomField>