force-app/main/default/objects/Application__c/fields/COI_Status__c.field-meta.xml
<CustomField>
    <fullName>COI_Status__c</fullName>
    <inlineHelpText>The current status of digital signature of COI.</inlineHelpText>
    <label>COI Status</label>
    <length>15</length>
    <type>Text</type>
</CustomField>