force-app/main/default/objects/Application__c/fields/COI_Status_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>COI_Status_Completed_Date__c</fullName>
    <inlineHelpText>The date of the Completed digital signature status</inlineHelpText>
    <label>COI Status Completed Date</label>
    <type>Date</type>
</CustomField>