force-app/main/default/objects/Application__c/fields/COI_Status_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>COI_Status_Sent_Date__c</fullName>
    <inlineHelpText>The date of the digital signature status Sent.</inlineHelpText>
    <label>COI Status Sent Date</label>
    <type>Date</type>
</CustomField>