force-app/main/default/objects/Application__c/fields/Collaborations_with_Initiatives__c.field-meta.xml
<CustomField>
    <fullName>Collaborations_with_Initiatives__c</fullName>
    <description>Describe any collaborations with other agencies or community initiatives that assist you in achieving the proposed objectives (2,000 character limit). (e.g. homeless consortium)</description>
    <inlineHelpText>Describe any collaborations with other agencies or community initiatives that assist you in achieving the proposed objectives (2,000 character limit). (e.g. homeless consortium)</inlineHelpText>
    <label>Collaborations with Initiatives</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>