force-app/main/default/objects/Application__c/fields/Committee_Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>Committee_Review_Notes__c</fullName>
    <label>Committee Review Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>