force-app/main/default/objects/Application__c/fields/Community_Benefit__c.field-meta.xml
<CustomField>
    <fullName>Community_Benefit__c</fullName>
    <label>Community Benefit</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>