force-app/main/default/objects/Application__c/fields/Community_Building_Activities__c.field-meta.xml
<CustomField>
    <fullName>Community_Building_Activities__c</fullName>
    <description>Schedule H-990 Part II Community Building Activities

Enter in this part the costs of the organization&apos;s activities that it engaged in during the tax year to protect or improve
the community&apos;s health or safety, and that aren&apos;t entered in Part I of Schedule H

1 Physical improvements and housing
2 Economic development
3 Community support
4 Environmental improvements
5 Leadership development and training for community members
6 Coalition building
7 Community health improvement advocacy
8 Workforce development
9 Other

(a) Number of Activities or programs (Optional)
(b) Persons served (optional)
(c) Total Community building Expense 
(d) Direct offsetting revenue
(e) Net community building expense
(f) Percent of total expense

https://www.irs.gov/pub/irs-pdf/i990sh.pdf</description>
    <inlineHelpText>Enter in this part the the organization&apos;s activities that it engaged in during the tax year to protect or improve the community&apos;s health or safety, and that aren&apos;t entered in Part I of Schedule H.
https://www.irs.gov/pub/irs-pdf/i990sh.pdf</inlineHelpText>
    <label>Community Building Activities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Physical improvements and housing</fullName>
            </value>
            <value>
                <fullName>2 Economic development</fullName>
            </value>
            <value>
                <fullName>3 Community support</fullName>
            </value>
            <value>
                <fullName>4 Environmental improvements</fullName>
            </value>
            <value>
                <fullName>5 Leadership dev/training for comm mbr</fullName>
            </value>
            <value>
                <fullName>6 Coalition building</fullName>
            </value>
            <value>
                <fullName>7 Community health improvement advocacy</fullName>
            </value>
            <value>
                <fullName>8 Workforce development</fullName>
            </value>
            <value>
                <fullName>9 Other</fullName>
            </value>
            <value>
                <fullName>Health professions education</fullName>
            </value>
            <value>
                <fullName>Community Health Improvement Services</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>