force-app/main/default/objects/Application__c/fields/Community_Resources__c.field-meta.xml
<CustomField>
    <fullName>Community_Resources__c</fullName>
    <description>List other community resources your agency utilizes to enhance or leverage the proposed project (1,000 character limit). (E.g. Foodbank, Senior Services’ I-ride, Established Support Groups)</description>
    <inlineHelpText>List other community resources your agency utilizes to enhance or leverage the proposed project (1,000 character limit). (E.g. Foodbank, Senior Services’ I-ride, Established Support Groups)</inlineHelpText>
    <label>Community Resources</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>