force-app/main/default/objects/Application__c/fields/Community_Solicitor__c.field-meta.xml
<CustomField>
    <fullName>Community_Solicitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community Solicitor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications (Community Solicitor)</relationshipLabel>
    <relationshipName>Applications4</relationshipName>
    <type>Lookup</type>
</CustomField>