force-app/main/default/objects/Application__c/fields/Conflict_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Conflict_of_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if recipient checked Conflict of Interest on the grant application</inlineHelpText>
    <label>Conflict of Interest</label>
    <type>Checkbox</type>
</CustomField>