force-app/main/default/objects/Application__c/fields/Conflict_of_Interest_Form_Status__c.field-meta.xml
<CustomField>
    <fullName>Conflict_of_Interest_Form_Status__c</fullName>
    <label>Conflict of Interest Form Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>