force-app/main/default/objects/Application__c/fields/Conflict_of_Interest_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Conflict_of_Interest_Received_Date__c</fullName>
    <description>this field is created to address the date from the docusign.</description>
    <label>Conflict of Interest Received Date</label>
    <type>DateTime</type>
</CustomField>