force-app/main/default/objects/Application__c/fields/Conga_BH_Grant_Summaries__c.field-meta.xml
<CustomField>
    <fullName>Conga_BH_Grant_Summaries__c</fullName>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id + 
&quot;&amp;queryid=[CRCommunity]a0I0a00000AAxvZ,[Budget]a0I0a00000AAxve?pv0=&quot; + Id + &quot;,[Objectives]a0I0a00000AAxvj?pv0=&quot; + Id + &quot;,[Funders]a0I0a00000AAxvo?pv0=&quot; + Id + &quot;,[Staffing]a0I0a00000AAxvp?pv0=&quot; + Id + 
&quot;&amp;templateid=a0Q0a00000FnXhcEAF&quot;  + 
&quot;&amp;qmode=Download&quot; + 
&quot;&amp;OFN=&quot;+ TEXT(View_Order__c) +&quot;_&quot;+Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga BH Grant Summaries</label>
    <type>Text</type>
</CustomField>