force-app/main/default/objects/Application__c/fields/Conga_Grant_Appproval_Email__c.field-meta.xml
<CustomField>
    <fullName>Conga_Grant_Appproval_Email__c</fullName>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;queryid=[GrantApproval]0Q_052EAE557088&quot; + 
&quot;&amp;congaemailtemplateid=0E_002EAE550409&quot; + 
&quot;&amp;ofn=&quot; + Account__r.Name +  
&quot;&amp;emailfromid=0D25b000000sXtW&quot; +
&quot;&amp;emailtoid=&quot; + Primary_Contact_contact__r.Id +   
&quot;&amp;qmode=SendEmail&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga_Grant_Appproval_Email</label>
    <type>Text</type>
</CustomField>