force-app/main/default/objects/Application__c/fields/Conga_Grant_Overdue_Upcoming_Reports__c.field-meta.xml
<CustomField>
    <fullName>Conga_Grant_Overdue_Upcoming_Reports__c</fullName>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;queryid=[GrantReports]0Q_054EAE617442&quot; + 
&quot;&amp;congaemailtemplateid=0E_004EAE877169&quot; + 
&quot;&amp;ofn=&quot; + Account__r.Name +  
&quot;&amp;emailfromid=0D25b000000sXtW&quot; +
&quot;&amp;emailtoid=&quot; + Primary_Contact_contact__r.Id +   
&quot;&amp;qmode=SendEmail&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga_Grant_Overdue_Upcoming_Reports</label>
    <type>Text</type>
</CustomField>