force-app/main/default/objects/Application__c/fields/Conga_GrantEmail_TemplateSlct__c.field-meta.xml
<CustomField>
    <fullName>Conga_GrantEmail_TemplateSlct__c</fullName>
    <formula>CASE( Application_Status__c , &quot;Closed - Rejected&quot;, &quot;a0Q0a00000F612u&quot;, &quot;a0Q0a00000F612p,a0Q0a00000F612z&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga_GrantEmail_TemplateSlct</label>
    <type>Text</type>
</CustomField>