force-app/main/default/objects/Application__c/fields/Conga_Grants_Emails__c.field-meta.xml
<CustomField>
    <fullName>Conga_Grants_Emails__c</fullName>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id + 
&quot;&amp;queryid=a0I0a00000ARTEaEAP&quot; + 
&quot;&amp;templateid=&quot;+Conga_GrantEmail_TemplateSlct__c+ 
&quot;&amp;OFN=&quot; +  Account__r.Name + &quot;-{Template.Label}&quot;+
&quot;&amp;qmode=Download&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Grants Emails</label>
    <type>Text</type>
</CustomField>