force-app/main/default/objects/Application__c/fields/Conga_LOI__c.field-meta.xml
<CustomField>
    <fullName>Conga_LOI__c</fullName>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;queryid=[LOI]a0I5b00000CpNSBEA3,[Regions]a0I0a00000BGLFqEAP?pv0=&quot; + Id +&quot;,[Objectives]a0I0a00000AAxvj?pv0=&quot; + Id + 
&quot;&amp;templateid=a0Q0a00000F5vexEAB&quot;  +
&quot;&amp;qmode=Download&quot; +
&quot;&amp;OFN=&quot;+  &quot;LOI_&quot;+Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga LOI</label>
    <type>Text</type>
</CustomField>