force-app/main/default/objects/Application__c/fields/Conga_Sponsorship_Emails__c.field-meta.xml
<CustomField>
    <fullName>Conga_Sponsorship_Emails__c</fullName>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id + 
&quot;&amp;queryid=a0I0a00000ARTEfEAP&quot; + 
&quot;&amp;templateid=a0Q0a00000F615yEAB&quot;+ 
&quot;&amp;OFN=&quot;+ Account__r.Name +&quot;_ApprovedEmail&quot;+ 
&quot;&amp;qmode=Download&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Sponsorship Emails</label>
    <type>Text</type>
</CustomField>