force-app/main/default/objects/Application__c/fields/Conga_Sponsorship_Summaries__c.field-meta.xml
<CustomField>
    <fullName>Conga_Sponsorship_Summaries__c</fullName>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id + 
&quot;&amp;queryid=[Sponsorships]a0I0a00000ARTEGEA5&quot; + 
&quot;&amp;templateid=a0Q0a00000F600bEAB&quot; + 
&quot;&amp;qmode=Download&quot;+
&quot;&amp;OFN=&quot;+ Account__r.Name +&quot;_Summaries&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Sponsorship Summaries</label>
    <type>Text</type>
</CustomField>