force-app/main/default/objects/Application__c/fields/Connection_to_COVID__c.field-meta.xml
<CustomField>
    <fullName>Connection_to_COVID__c</fullName>
    <label>Connection to COVID</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>