force-app/main/default/objects/Application__c/fields/Cost_of_Admission__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Admission__c</fullName>
    <label>Cost of Admission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>