force-app/main/default/objects/Application__c/fields/County_Served__c.field-meta.xml
<CustomField>
    <fullName>County_Served__c</fullName>
    <label>County Served</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accomack</fullName>
            </value>
            <value>
                <fullName>Albemarle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>