force-app/main/default/objects/Application__c/fields/County_Served_Test__c.field-meta.xml
<CustomField>
    <fullName>County_Served_Test__c</fullName>
    <label>County Served Test</label>
    <length>50</length>
    <type>Text</type>
</CustomField>