force-app/main/default/objects/Application__c/fields/CR_Grant_Summaries__c.field-meta.xml
<CustomField>
    <fullName>CR_Grant_Summaries__c</fullName>
    <description>##Conga created button:00b0a000000d45a</description>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +


&quot;&amp;QueryId=[CRCommunity]a0I0a00000AAxvZ,[Objectives]0Q_009EAE763274?pv0=&quot; + Id + &quot;,[ApplicantOrg]0Q_044EAE707306?pv0=&quot;+  Account__r.Id  +&quot;,[Contact]0Q_045EAE281018?pv0=&quot; + Primary_Contact_contact__r.Id +

&quot;&amp;TemplateId=a0Q0a00000CpRsD&quot; +

&quot;&amp;OFN=+{Template.Label}&quot;+&quot;-&quot;+ Account__r.Name</formula>
    <label>CR Grant Summaries</label>
    <type>Text</type>
</CustomField>