force-app/main/default/objects/Application__c/fields/Custom_Merge_Paragraph__c.field-meta.xml
<CustomField>
    <fullName>Custom_Merge_Paragraph__c</fullName>
    <label>Custom Merge Paragraph</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>