force-app/main/default/objects/Application__c/fields/Deadline_for_Print_Materials__c.field-meta.xml
<CustomField>
    <fullName>Deadline_for_Print_Materials__c</fullName>
    <label>Deadline for Print Materials</label>
    <type>Date</type>
</CustomField>