force-app/main/default/objects/Application__c/fields/Diversity_Inclusion__c.field-meta.xml
<CustomField>
    <fullName>Diversity_Inclusion__c</fullName>
    <description>Has your organization developed a plan to address diversity, equity, &amp; inclusion? If so, please explain your efforts.</description>
    <inlineHelpText>Has your organization developed a plan to address diversity, equity, &amp; inclusion? If so, please explain your efforts.</inlineHelpText>
    <label>Diversity Inclusion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>