force-app/main/default/objects/Application__c/fields/DocuSign_Status__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Status__c</fullName>
    <label>DocuSign Status</label>
    <type>TextArea</type>
</CustomField>