force-app/main/default/objects/Application__c/fields/ELT_Objective_1__c.field-meta.xml
<CustomField>
    <fullName>ELT_Objective_1__c</fullName>
    <label>ELT Objective 1</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>