force-app/main/default/objects/Application__c/fields/ELT_Summaries__c.field-meta.xml
<CustomField>
    <fullName>ELT_Summaries__c</fullName>
    <description>##Conga created button:00b0a000001C3EU</description>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;queryid=[ELTs]a0I0a00000ARSSg&quot; + 
&quot;&amp;templateid=a0Q0a00000F5svH&quot; + 
&quot;&amp;qmode=Download&quot;</formula>
    <label>ELT Summaries</label>
    <type>Text</type>
</CustomField>