force-app/main/default/objects/Application__c/fields/Estimated_Waiting_Period__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Waiting_Period__c</fullName>
    <label>Estimated Waiting Period</label>
    <type>TextArea</type>
</CustomField>