force-app/main/default/objects/Application__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <label>Event/Start Date</label>
    <type>Date</type>
</CustomField>