force-app/main/default/objects/Application__c/fields/Event_Description__c.field-meta.xml
<CustomField>
    <fullName>Event_Description__c</fullName>
    <label>Event Description</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>