force-app/main/default/objects/Application__c/fields/Event_Proceeds_Go_To__c.field-meta.xml
<CustomField>
    <fullName>Event_Proceeds_Go_To__c</fullName>
    <label>Event Proceeds Go To:</label>
    <type>TextArea</type>
</CustomField>