force-app/main/default/objects/Application__c/fields/Executive_Sponsor_Account__c.field-meta.xml
<CustomField>
    <fullName>Executive_Sponsor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executive Sponsor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications (Executive Sponsor)</relationshipLabel>
    <relationshipName>Applications2</relationshipName>
    <type>Lookup</type>
</CustomField>