force-app/main/default/objects/Application__c/fields/Executive_Summary__c.field-meta.xml
<CustomField>
    <fullName>Executive_Summary__c</fullName>
    <label>Executive Summary</label>
    <length>30000</length>
    <type>Html</type>
</CustomField>