force-app/main/default/objects/Application__c/fields/External_Approval_URL__c.field-meta.xml
<CustomField>
    <fullName>External_Approval_URL__c</fullName>
    <label>External Approval URL</label>
    <type>Url</type>
</CustomField>