force-app/main/default/objects/Application__c/fields/External_Approver__c.field-meta.xml
<CustomField>
    <fullName>External_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Approver</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications (External Approver)</relationshipLabel>
    <relationshipName>Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>