force-app/main/default/objects/Application__c/fields/FA_Response_Id__c.field-meta.xml
<CustomField>
    <fullName>FA_Response_Id__c</fullName>
    <description>This is the response ID originates from the forms assemble application and if present identified that the successful submission of the grant has occurred.</description>
    <externalId>true</externalId>
    <label>FA Response Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>